apps/baikal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: baikal
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: baikal
